--- a/index.css
+++ b/index.css
@@ -1,56 +1,3 @@
-#heading {
-  color: red;
-}
-.header-section {
-  width: 100vw;
-  border: 1px solid black;
-  display: flex;
-  justify-content: space-between;
-}
-.res-logo {
-  width: 100px;
-  height: 100px;
-}
-body {
-  margin: 0px;
-}
-
-ul {
-  display: flex;
-  align-self: center;
-}
-ul > li {
-  list-style-type: none;
-  margin: 20px;
-}
-
-.res-container {
-  display: flex;
-  flex-wrap: wrap;
-  border-radius: 20px;
-  gap: 10px;
-  margin: 0 20px;
-}
-
-.res-card {
-  width: 200px;
-  padding: 5px;
-  border: 1px solid black;
-}
-
-.res-card:hover {
-  cursor: pointer;
-}
-
-.res-card-img {
-  width: 100%;
-  height: 30%;
-  border-radius: 20px;
-}
-
-.body-container {
-  margin: 10px;
-}
-.top-rated-restaurants-button {
-  margin-bottom: 15px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
